--- a/microsoft.html
+++ b/microsoft.html
@@ -17,7 +17,9 @@
         <section id="nav">
             <nav>
                 <div class="logo">
-                    <div class="logo-picture"></div>
+                    <div class="logo-picture">
+                        <img src="/image/logo.png" alt="">
+                    </div>
                     <div class="link 365">Microsoft</div>
                     <div class="link office">Office</div>
                     <div class="link windos">Windos</div>
