--- a/microsoft.html
+++ b/microsoft.html
@@ -20,12 +20,15 @@
                     <div class="logo-picture">
                         <img src="/image/logo.png" alt="">
                     </div>
+                    <div class="connect">
                     <div class="link 365">Microsoft</div>
                     <div class="link office">Office</div>
                     <div class="link windos">Windos</div>
                     <div class="link surface">Surface</div>
                     <div class="link xbox">Xbox</div>
                     <div class="link help">支援</div>
+                    </div>
+                   
                 </div>
                 <div class="search-login">
                     <div class="link all">所有Microsoft<i class="fa-solid fa-angle-down"></i></div>
