--- a/microsoft.html
+++ b/microsoft.html
@@ -40,6 +40,17 @@
                     </div>
                 </div>
             </nav>
+            <figure>
+                <div>
+                    <picture>
+                        <img src="/image/banner-1920.jpg" alt="">
+                    </picture>
+                </div>
+                <div>
+                    
+                </div>
+                
+            </figure>
         </section>
     </header>
 </body>
