--- a/microsoft.html
+++ b/microsoft.html
@@ -40,18 +40,17 @@
                     </div>
                 </div>
             </nav>
-            <figure>
-                <div>
-                    <picture>
-                        <img src="/image/banner-1920.jpg" alt="">
-                    </picture>
-                </div>
-                <div>
+        </section>
+        <figure>
+            <div class="banner">
+                <picture>
+                    <img src="/image/banner-1920.jpg">
+                </picture>
+                <div class="picture-word">
                     
                 </div>
-                
-            </figure>
-        </section>
+            </div>
+        </figure>
     </header>
 </body>
 
