--- a/microsoft.html
+++ b/microsoft.html
@@ -21,22 +21,21 @@
                         <img src="/image/logo.png" alt="">
                     </div>
                     <div class="connect">
-                        <div class="link 365">Microsoft</div>
-                        <div class="link office">Office</div>
-                        <div class="link windos">Windos</div>
-                        <div class="link surface">Surface</div>
-                        <div class="link xbox">Xbox</div>
-                        <div class="link help">支援</div>
+                        <div class="link 365"><a href="">Microsoft</a></div>
+                        <div class="link office"><a href="">Office</a></div>
+                        <div class="link windos"><a href="">Windos</a></div>
+                        <div class="link surface"><a href="">Surface</a></div>
+                        <div class="link xbox"><a href="">Xbox</a></div>
+                        <div class="link help"><a href="">支援</a></div>
                     </div>
 
                 </div>
                 <div class="search-login">
-                    <div class="link all">所有Microsoft <i class="fa-solid fa-angle-down"></i></div>
-                    <div class="link search">搜尋<i class="fa-solid fa-magnifying-glass fa-flip-horizontal"></i></div>
-                    <div class="link shop">購物車 <i class="fa-solid fa-cart-shopping"></i></div>
-                    <div class="link login">登入
-
-                        <img src="./image/123154.svg" alt="">
+                    <div class="link all"><a href="">所有Microsoft</a><i class="fa-solid fa-angle-down"></i></div>
+                    <div class="link search"><a href="">搜尋</a><i
+                            class="fa-solid fa-magnifying-glass fa-flip-horizontal"></i></div>
+                    <div class="link shop"><a href="">購物車</a><i class="fa-solid fa-cart-shopping"></i></div>
+                    <div class="link login"><a href="">登入</a><img src="./image/123154.svg" alt="">
                     </div>
                 </div>
             </nav>
@@ -44,23 +43,77 @@
 
     </header>
     <main>
-        <picture>
-            <source media="(max-width: 540px)" srcset="./image/banner-539x440.jfif">
-            <source media="(max-width: 859px)" srcset="./image/banner-859x540.jfif">
-            <source media="(max-width: 1083px)" srcset="./image/banner-1083x600.jfif">
-            <source media="(max-width: 1399px)" srcset="./image/banner-1399x600.jfif">
-            <img src="./image/banner-1920.jpg">
-            
+        <div class="banner">
+            <picture>
+                <source media="(max-width: 540px)" srcset="./image/banner-539x440.jfif">
+                <source media="(max-width: 859px)" srcset="./image/banner-859x540.jfif">
+                <source media="(max-width: 1083px)" srcset="./image/banner-1083x600.jfif">
+                <source media="(max-width: 1399px)" srcset="./image/banner-1399x600.jfif">
+                <img src="./image/banner-1920.jpg">
+            </picture>
+            <div class="picture-word-shell">
                 <div class="picture-word">
                     <div class="news-release">新上市</div>
                     <h1>Surface Laptop Go 2</h1>
                     <div class="describe">外型時尚的筆記型電腦配備 12.4 吋觸控螢幕、絕佳的打字體驗，以及改良的 HD 相機</div>
                     <button>深入了解</button>
                 </div>
-
             </div>
-            
-        </picture>
+        </div>
+        <div class="carousel-button"></div>
+        <div class="container-top">
+
+            <ul>
+                <li>
+                    <img src="./image/gldn-Quick-Link-Icon-80x80-Microsoft-365.jfif">
+                    <a href="">選擇您的 Microsoft 365</a>
+                </li>
+                <li>
+                    <img src="./image/icon-LL-surface-kickstand-120x120.jfif">
+                    <a href="">選購 Surface 裝置</a>
+                </li>
+                <li>
+                    <img src="./image/gldn-Quick-Link-Icon-80x80-Microsoft-365.jfif">
+                    <a href="">取得 Windows 11</a>
+                </li>
+            </ul>
+        </div>
+        <div class="container-mid">
+            <div class="commodity"><img src="./image/gldn-CP-m365-icons-7up-1668x940.jfif" alt="">
+                <div class="word">
+                    <h2>Microsoft 365</h2>
+                    <p>進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中。</p>
+                </div>
+                <div class="link-group">
+                    <a href="">最多可供 6 人使用<i class="fa-solid fa-angle-right"></i></a>
+                    <a href="">適合 1 人使用<i class="fa-solid fa-angle-right"></i></a></div>
+            </div>
+            <div class="commodity"><img src="./image/Gldn-mscom-01-Black-Platinum-CP01.jfif" alt="">
+                <div class="word">
+                    <h2>Surface Laptop 4</h2>
+                    <p> 運用完美結合時尚外型、超薄設計、多工速度和增強效能的裝置，一手包辦。 </p>
+                </div>
+                <div class="link-group">
+                    <a href="">立即選購<i class="fa-solid fa-angle-right"></i></a></div>
+            </div>
+            <div class="commodity"><img src="./image/gldn-MSFT-CP-Edge.jfif" alt="">
+                <div class="word">
+                    <h2>Microsoft Edge</h2>
+                    <p> 在您瀏覽時提供世界級的效能，以及更多的隱私、更充足的生產力與更高的價值。 </p>
+                </div>
+                <div class="link-group">
+                    <a href="">立即下載<i class="fa-solid fa-angle-right"></i></a></div>
+            </div>
+            <div class="commodity"><img src="./image/Content-Card-AEM-PC-Game-Pass-Expansion-No-Logo.jfif" alt="">
+                <div class="word">
+                    <h2>前 3 個月只要 NT$30</h2>
+                    <p>加入 Xbox Game Pass Ultimate 或 PC Game Pass 只要 NT$30，解鎖數百款精彩遊戲。 此優惠僅適用於新訂閱者。</p>
+                </div>
+                <div class="link-group">
+                    <a href="">加入 PC Game Pass<i class="fa-solid fa-angle-right"></i></a>
+                    <a href="">加入 Game Pass Ultimate<i class="fa-solid fa-angle-right"></i></a></div>
+            </div>
+        </div>
     </main>
 </body>
 
