--- a/microsoft.html
+++ b/microsoft.html
@@ -56,7 +56,7 @@
                     <div class="news-release">新上市</div>
                     <h1>Surface Laptop Go 2</h1>
                     <div class="describe">外型時尚的筆記型電腦配備 12.4 吋觸控螢幕、絕佳的打字體驗，以及改良的 HD 相機</div>
-                    <button>深入了解</button>
+                    <p>深入了解</p>
                 </div>
             </div>
         </div>
@@ -86,7 +86,8 @@
                 </div>
                 <div class="link-group">
                     <a href="">最多可供 6 人使用<i class="fa-solid fa-angle-right"></i></a>
-                    <a href="">適合 1 人使用<i class="fa-solid fa-angle-right"></i></a></div>
+                    <a href="">適合 1 人使用<i class="fa-solid fa-angle-right"></i></a>
+                </div>
             </div>
             <div class="commodity"><img src="./image/Gldn-mscom-01-Black-Platinum-CP01.jfif" alt="">
                 <div class="word">
@@ -94,7 +95,8 @@
                     <p> 運用完美結合時尚外型、超薄設計、多工速度和增強效能的裝置，一手包辦。 </p>
                 </div>
                 <div class="link-group">
-                    <a href="">立即選購<i class="fa-solid fa-angle-right"></i></a></div>
+                    <a href="">立即選購<i class="fa-solid fa-angle-right"></i></a>
+                </div>
             </div>
             <div class="commodity"><img src="./image/gldn-MSFT-CP-Edge.jfif" alt="">
                 <div class="word">
@@ -102,7 +104,8 @@
                     <p> 在您瀏覽時提供世界級的效能，以及更多的隱私、更充足的生產力與更高的價值。 </p>
                 </div>
                 <div class="link-group">
-                    <a href="">立即下載<i class="fa-solid fa-angle-right"></i></a></div>
+                    <a href="">立即下載<i class="fa-solid fa-angle-right"></i></a>
+                </div>
             </div>
             <div class="commodity"><img src="./image/Content-Card-AEM-PC-Game-Pass-Expansion-No-Logo.jfif" alt="">
                 <div class="word">
@@ -111,8 +114,147 @@
                 </div>
                 <div class="link-group">
                     <a href="">加入 PC Game Pass<i class="fa-solid fa-angle-right"></i></a>
-                    <a href="">加入 Game Pass Ultimate<i class="fa-solid fa-angle-right"></i></a></div>
+                    <a href="">加入 Game Pass Ultimate<i class="fa-solid fa-angle-right"></i></a>
+                </div>
             </div>
+        </div>
+        <div class="banner-2">
+            <picture>
+                <source media="(max-width: 540px)" srcset="./image/banner-2-539x440.jpg">
+                <source media="(max-width: 859px)" srcset="./image/banner-2-859x540.jpg">
+                <source media="(max-width: 1083px)" srcset="./image/banner-2-1083x600.jpg">
+                <source media="(max-width: 1399px)" srcset="./image/banner-2-1260x600.jpg">
+                <img src="./image/banner-2-1596x600.jpg">
+            </picture>
+            <div class="picture-word-shell">
+                <div class="picture-word">
+                    <h1>Microsoft OneDrive</h1>
+                    <div class="describe">將檔案和相片儲存到 OneDrive，即可隨時隨地從任何裝置存取</div>
+                    <button>深入了解</button>
+                </div>
+            </div>
+        </div>
+        <div class="container-bot">
+            <h1>適用於商務</h1>
+            <div class="information">
+                <div class="card">
+                    <picture>
+                        <source media="(max-width: 540px)" srcset="./image/container-bot/1/M01-540.jpg">
+                        <source media="(max-width: 859px)" srcset="./image/container-bot/1/M01-860.jpg">
+                        <source media="(max-width: 1083px)" srcset="./image/container-bot/1/M01-1084.jpg">
+                        <source media="(max-width: 1399px)" srcset="./image/container-bot/1/M01-1400.jpg">
+                        <img src="./image/container-bot/1/M01.jpg" alt="">
+                    </picture>
+                    <ul>
+                        <li>新上市</li>
+                    </ul>
+                    <div class="word">
+                        <h2>Surface Laptop Go 2 商務版</h2>
+                        <p> 外型時尚、方便攜帶的筆記型電腦配備絕佳的打字體驗、Windows 11 專業版和專業級效能。 </p>
+                        <a href="">深入了解</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <picture>
+                        <source media="(max-width: 540px)"
+                            srcset="./image/container-bot/2/gldn-CP-Microsoft-Teams-Commercial-540.jpg">
+                        <source media="(max-width: 859px)"
+                            srcset="./image/container-bot/2/gldn-CP-Microsoft-Teams-Commercial-860.jpg">
+                        <source media="(max-width: 1083px)"
+                            srcset="./image/container-bot/2/gldn-CP-Microsoft-Teams-Commercial-1084.jpg">
+                        <source media="(max-width: 1399px)"
+                            srcset="./image/container-bot/2/gldn-CP-Microsoft-Teams-Commercial-1400.jpg">
+                        <img src="./image/container-bot/2/gldn-CP-Microsoft-Teams-Commercial.jpg" alt="">
+                    </picture>
+                    <div class="word">
+                        <h2>免費取得 Microsoft Teams</h2>
+                        <p> 線上會議、聊天和共用雲端儲存空間，盡在一處。 </p>
+                        <a href="">免費註冊</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <picture>
+                        <source media="(max-width: 540px)"
+                            srcset="./image/container-bot/3/gldn-M365-CP-Microsoft365-Commercial-540.jpg">
+                        <source media="(max-width: 859px)"
+                            srcset="./image/container-bot/3/gldn-M365-CP-Microsoft365-Commercial-860.jpg">
+                        <source media="(max-width: 1083px)"
+                            srcset="./image/container-bot/3/gldn-M365-CP-Microsoft365-Commercial-1084.jpg">
+                        <source media="(max-width: 1399px)"
+                            srcset="./image/container-bot/3/gldn-M365-CP-Microsoft365-Commercial-1400.jpg">
+                        <img src="./image/container-bot/3/gldn-M365-CP-Microsoft365-Commercial.jpg" alt="">
+                    </picture>
+                    <div class="word">
+                        <h2>Microsoft 365 商務版</h2>
+                        <p> 透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。 </p>
+                        <a href="">立即選購</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <picture>
+                        <source media="(max-width: 540px)"
+                            srcset="./image/container-bot/4/Content-Card-Windows-11-Business-540.jpg">
+                        <source media="(max-width: 859px)"
+                            srcset="./image/container-bot/4/Content-Card-Windows-11-Business-860.jpg">
+                        <source media="(max-width: 1083px)"
+                            srcset="./image/container-bot/4/Content-Card-Windows-11-Business-1084.jpg">
+                        <source media="(max-width: 1399px)"
+                            srcset="./image/container-bot/4/Content-Card-Windows-11-Business-1400.jpg">
+                        <img src="./image/container-bot/4/Content-Card-Windows-11-Business.jpg" alt="">
+                    </picture>
+                    <div class="word">
+                        <h2>商務用 Windows 11 登場</h2>
+                        <p> 專為混合式辦公而設計。 為員工帶來實用性。 為 IT 帶來一致性。 為所有人帶來安全性。 </p>
+                        <a href="">深入了解</a>
+                    </div>
+                </div>
+            </div>
+            <div class="community">
+                <ul>
+                    <li>關注 Microsoft</li>
+                    <img src="./image/community/Facebook 2x.jpg" alt="">
+                    <img src="./image/community/YouTube 2x.jpg" alt="">
+                </ul>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="list">
+
+                <div class="latest-trends">
+                    <p>最新動向</p>
+                    <ul>
+                        <li>最新動向</li>
+
+                    </ul>
+                </div>
+                <div class="Microsoft-Store">
+                    <ul>
+                        <li>Microsoft Store
+                            最新動向</li>
+                    </ul>
+                </div>
+                <div class="teach">
+                    <ul>
+
+                    </ul>
+                </div>
+                <div class="business">
+                    <ul>
+
+                    </ul>
+                </div>
+                <div class="Developers">
+                    <ul>
+
+                    </ul>
+                </div>
+                <div class="company">
+                    <ul>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="statement"></div>
         </div>
     </main>
 </body>
