--- a/microsoft.html
+++ b/microsoft.html
@@ -52,9 +52,9 @@
         <div class="banner">
             <picture>
                 <source media="(max-width: 540px)" srcset="./image/banner-539x440.jfif">
-                <source media="(max-width: 859px)" srcset="./image/banner-859x540.jfif">
-                <source media="(max-width: 1083px)" srcset="./image/banner-1083x600.jfif">
-                <source media="(max-width: 1399px)" srcset="./image/banner-1399x600.jfif">
+                <source media="(max-width: 860px)" srcset="./image/banner-859x540.jfif">
+                <source media="(max-width: 1086px)" srcset="./image/banner-1083x600.jfif">
+                <source media="(max-width: 1400px)" srcset="./image/banner-1399x600.jfif">
                 <img src="./image/banner-1920.jpg">
             </picture>
             <div class="picture-word-shell">
@@ -115,8 +115,11 @@
                         srcset="./image/container-mid/2/Gldn-mscom-01-Black-Platinum-CP01-1400.jfif">
                         <img src="./image/container-mid/2/Gldn-mscom-01-Black-Platinum-CP01.jfif">
                     </picture>
-                    <h2>Surface Laptop 4</h2>
-                    <p> 運用完美結合時尚外型、超薄設計、多工速度和增強效能的裝置，一手包辦。 </p>
+                    <div class="word">
+
+                        <h2>Surface Laptop 4</h2>
+                        <p> 運用完美結合時尚外型、超薄設計、多工速度和增強效能的裝置，一手包辦。 </p>
+                    </div>
                     <div class="link-group">
                         <a href="">立即選購</a>
                     </div>
@@ -129,8 +132,11 @@
                         <source media="(max-width: 1399px)" srcset="./image/container-mid/3/gldn-MSFT-CP-Edge-1400.jfif">
                         <img src="./image/container-mid/3/gldn-MSFT-CP-Edge.jfif">
                     </picture>
-                    <h2>Microsoft Edge</h2>
-                    <p> 在您瀏覽時提供世界級的效能，以及更多的隱私、更充足的生產力與更高的價值。 </p>
+                    <div class="word">
+
+                        <h2>Microsoft Edge</h2>
+                        <p> 在您瀏覽時提供世界級的效能，以及更多的隱私、更充足的生產力與更高的價值。 </p>
+                    </div>
                     <div class="link-group">
                         <a href="">立即下載</a>
                     </div>
@@ -163,9 +169,9 @@
         <div class="banner-2">
             <picture>
                 <source media="(max-width: 540px)" srcset="./image/banner-2-539x440.jpg">
-                <source media="(max-width: 859px)" srcset="./image/banner-2-859x540.jpg">
-                <source media="(max-width: 1083px)" srcset="./image/banner-2-1083x600.jpg">
-                <source media="(max-width: 1399px)" srcset="./image/banner-2-1260x600.jpg">
+                <source media="(max-width: 860px)" srcset="./image/banner-2-859x540.jpg">
+                <source media="(max-width: 1086px)" srcset="./image/banner-2-1083x600.jpg">
+                <source media="(max-width: 1400px)" srcset="./image/banner-2-1260x600.jpg">
                 <img src="./image/banner-2-1596x600.jpg">
             </picture>
             <div class="picture-word-shell">
